@@ -1,4 +1,5 @@
 ﻿using Consolaria.Content.Items.Consumables;
+using Consolaria.Content.Items.Weapons.Ammo;
 using RandomModCompat.Common.APIs;
 using RandomModCompat.Core;
 
@@ -10,7 +11,10 @@ internal sealed class ConsolariaItemCheckBlacklistModule : CrossModModule<ItemCh
 
 	protected internal override void PostSetupContent()
 	{
+		API.Add<VulcanBolt>();
+
 		// TODO: Remove in 1.4.4.
+		API.Add<SpectralArrow>();
 		API.Add<HolyHandgrenade2>();
 	}
 }
